--- a/acomodacoes.html
+++ b/acomodacoes.html
@@ -23,7 +23,7 @@
                         <li><a href="servicos.html">Serviços</a></li>
                         <li><a href="imagens.html">Imagens</a></li>
                         <li><a href="contato.html">Contato</a></li>
-
+                        <li><a href="">Banana</a></li>
                     </ul>
                 </div>
             </nav>
