pagina servicos iniciada

--- a/servicos.html
+++ b/servicos.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/servicos.css">
         <link rel="stylesheet" href="css/reset.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="widht=device-widht, initial-scale=1.0">
@@ -27,5 +27,26 @@
                 </div>
             </nav>
         </header>
+
+        <main>
+            <div class="servicos">
+                <div class="esquerda">
+                    <div class="imgesquerda">
+                        <img src="images/servicos-restaurante.jpg" alt="">
+                    </div>
+                    <div class="texto">
+                        <h2 class="h2esquerda">Restaurante na praia</h2>
+                        <p class="pesquerda">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A nobis voluptatem numquam doloribus eveniet laboriosam tempora eligendi consectetur recusandae ipsum? Ullam quisquam commodi sint ipsa fugiat eius officia iure voluptatibus.</p>
+                    </div>
+                </div>
+              
+            </div>
+        
+
+
+        </main>
+
+
+
     </body>
 </html>
