pagina servicos finalizado

--- a/servicos.html
+++ b/servicos.html
@@ -33,13 +33,55 @@
                 <div class="imgesquerda">
                     <img class="restaurante" src="images/servicos-restaurante.jpg" alt="">
                 </div>
-                <div class="texto">
-                    <h2 class="h2esquerda">Restaurante na praia</h2>
-                    <p class="pesquerda">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A nobis voluptatem numquam doloribus eveniet laboriosam tempora eligendi consectetur recusandae ipsum? Ullam quisquam commodi sint ipsa fugiat eius officia iure voluptatibus.</p>
+                <div class="textodireita">
+                    <h2 class="h2direita">Restaurante na praia</h2>
+                    <p class="pdireita">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A nobis voluptatem numquam doloribus eveniet laboriosam tempora eligendi consectetur recusandae ipsum? Ullam quisquam commodi sint ipsa fugiat eius officia iure voluptatibus.</p>
                 </div>
             </div>
-                      
-  
+            <div class="direita">
+                <div class="textoesquerda">
+                    <h2 class="h2esquerda">Atividades mentais e corporais guiadas</h2>
+                    <p class="pesquerda">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A nobis voluptatem numquam doloribus eveniet laboriosam tempora eligendi consectetur recusandae ipsum? Ullam quisquam commodi sint ipsa fugiat eius officia iure voluptatibus.</p>
+                </div>
+                <div class="imgdireita">
+                    <img class="yoga" src="images/servicos-yoga.jpg" alt="">
+                </div>
+            </div>
+            <div class="esquerda">
+                <div class="imgesquerda">
+                    <img class="massagem" src="images/servicos-massagem.jpg" alt="">
+                </div>
+                <div class="textodireita">
+                    <h2 class="h2direita">Sessões de massagem profissional</h2>
+                    <p class="pdireita">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A nobis voluptatem numquam doloribus eveniet laboriosam tempora eligendi consectetur recusandae ipsum? Ullam quisquam commodi sint ipsa fugiat eius officia iure voluptatibus.</p>
+                </div>
+            </div>
+            <div class="direita">
+                <div class="textoesquerda">
+                    <h2 class="h2esquerda">Passeio de barco pelo mar</h2>
+                    <p class="pesquerda">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A nobis voluptatem numquam doloribus eveniet laboriosam tempora eligendi consectetur recusandae ipsum? Ullam quisquam commodi sint ipsa fugiat eius officia iure voluptatibus.</p>
+                </div>
+                <div class="imgdireita">
+                    <img class="barco" src="images/servico-barco.jpg" alt="">
+                </div>
+            </div>         
+            
         </main>
+
     </body>
+    <footer>
+        <div class="redes_sociais">
+            <p class="titulos_footer">Nos siga em nossas redes sociais:</p>
+            <p class="botoes_footer">Instagram</p>
+            <p class="botoes_footer">Twitter</p>
+            <p class="botoes_footer">Facebook</p>
+        </div>
+        <div class="menu_footer">
+            <p class="titulos_footer">Menu:</p>
+            <p class="botoes_footer">Acomodações</p>
+            <p class="botoes_footer">Serviços</p>
+            <p class="botoes_footer">Imagens</p>
+            <p class="botoes_footer">Contato</p>
+        </div>
+    </footer>
 </html>
