criação da pagina de imagens

--- a/imagens.html
+++ b/imagens.html
@@ -2,17 +2,17 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style_img.css">
         <link rel="stylesheet" href="css/reset.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="widht=device-widht, initial-scale=1.0">
-        <title>Pousada</title>
+        <title>Galeria</title>
     </head>
 
     <body>
         <header id="cabecalho">
             <div id="logo_nome">
-                <h1 id="nome">Pousada</h1>
+                <h1 id="nome">Galeria de fotos</h1>
             </div>
 
             <!--menu-->
@@ -27,5 +27,118 @@
                 </div>
             </nav>
         </header>
+
+        <!-- Container com todas as fotos. -->
+        <div class="container_galeria"> 
+            <!-- caixa que contém imagem e descrição. -->
+            <div class="item_galeria w-2 h-2"> 
+                <img src="/images/img1.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 01
+                </span>
+            </div>
+            <div class="item_galeria w-2 h-1">
+                <img src="/images/img2.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 02
+                </span>
+            </div>
+            <div class="item_galeria w-1 h-2">
+                <img src="/images/img3.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 03
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img4.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 04
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img5.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 05
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img6.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 06
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img7.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 07
+                </span>
+            </div>
+            <div class="item_galeria w-1 h-2">
+                <img src="/images/img8.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 08
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img9.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 09
+                </span>
+            </div>
+            <div class="item_galeria w-2 h-1">
+                <img src="/images/img10.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 10
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img11.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 11
+                </span>
+            </div>
+            <div class="item_galeria w-1 h-2">
+                <img src="/images/img12.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 12
+                </span>
+            </div>
+            <div class="item_galeria w-2 h-1">
+                <img src="/images/img13.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 13
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img14.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 14
+                </span>
+            </div>
+            <div class="item_galeria">
+                <img src="/images/img15.jpg" alt="" class="img_galeria">
+                <span class="titulo_galeria">
+                    imagem 15
+                </span>
+            </div>        
+        </div>
+
+        <footer>
+            <div class="redes_sociais">
+                <p class="titulos_footer">Nos siga em nossas redes sociais:</p>
+                <p class="botoes_footer">Instagram</p>
+                <p class="botoes_footer">Twitter</p>
+                <p class="botoes_footer">Facebook</p>
+            </div>
+            <div class="menu_footer">
+                <p class="titulos_footer">Menu:</p>
+                <p class="botoes_footer">Acomodações</p>
+                <p class="botoes_footer">Serviços</p>
+                <p class="botoes_footer">Imagens</p>
+                <p class="botoes_footer">Contato</p>
+            </div>
+        </footer>
+
+
     </body>
 </html>
